--- a/index.html
+++ b/index.html
@@ -60,11 +60,21 @@
         <div class="bottom_header">
             <div class="container">
                 <nav class="nav">
-                    <div class="category_nav">
+                    <div onclick="openCategoryList()" class="category_nav">
                         <div class="category_btn">
                             <i class="fa-solid fa-bars"></i>
                             <p>Browse Category</p>
                             <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                        <div class="category_nav_list">
+                            <a href="#">Top 10 Offers</a>
+                            <a href="#">Electronics & Digital</a>
+                            <a href="#">Phones & Tablet</a>
+                            <a href="#">Fashion & Clothings</a>
+                            <a href="#">Televsion & Monitor</a>
+                            <a href="#">Jewrely & Watches</a>
+                            <a href="#">Washing Machine</a>
+                            <a href="#">Toys & Hobbies</a>
                         </div>
                     </div>
                     <ul class="nav_links">
@@ -82,6 +92,7 @@
             </div>
         </div>
     </header>
-    
+   
+    <script src="JS/main.js"></script>
 </body>
 </html>
