--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="login_signup btns">
                     <a href="#" class="btn" id="loginBtn">Login &nbsp;  <i class="fa-solid fa-right-to-bracket"></i></a>
                     <a href="#"class="btn" id="signupBtn">Sign Up &nbsp; <i class="fa-solid fa-user-plus"></i> </a>
-                    <a href="#" class="btn" id="logoutBtn">Log Out </a>
+                    <a href="#" class="btn" id="logoutBtn" style="display: none ;">Log Out </a>
                 </div>
             </div>
         </div>
