--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <span class="close" onclick="closeModal('loginModal')">&times;</span>
     <h2>Login</h2>
     <form>
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
+      <input type="email" placeholder="Email"  />
+      <input type="password" placeholder="Password"  />
       <button type="submit">Login</button>
     </form>
   </div>
@@ -118,9 +118,9 @@
     <span class="close" onclick="closeModal('signupModal')">&times;</span>
     <h2>Sign Up</h2>
     <form>
-      <input type="text" placeholder="Username" required />
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required /> 
+      <input type="text" placeholder="Username"  />
+      <input type="email" placeholder="Email" />
+      <input type="password" placeholder="Password"  /> 
       <input type="password" id="signupConfirmPassword" placeholder="Confirm Password"><br>
 
       <button type="submit">Sign Up</button>
@@ -381,8 +381,9 @@
 
         </div>
     </footer>
-    
-      
+
+    <div id="notification" style="display: none;"></div>
+
     <script src="JS/main.js"></script>
     <script src="fetchProducts.js"></script>
 
