--- a/product.html
+++ b/product.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>product-details</title>
+    <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="/CSS/productStyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <body>
-    <body>
-        <div class="product-detail" id="productDetail">
-          <!-- Product detail will be rendered here -->
-        </div>
-        <script src="./JS/product.js"></script>
+    <div class="product-detail" id="productDetail">
+      <!-- Product detail will be rendered here -->
+    </div>
+    <div id="notification" style="display: none;"></div>
+    <script src="./JS/loginandsignup.js"></script>
+    <script src="./JS/product.js"></script>
 </body>
 </html>
