--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <nav class="nav">
                     <ul class="nav_links">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
+                        <li><a href="#order">Order</a></li>
                         <li><a href="#last-banner">Sales</a></li> 
                         <li><a href="#footer">Contact</a></li>
                     </ul>
@@ -194,7 +194,7 @@
            </div>
     </div>
 
-    <div class="banners">
+    <div id="order" class="banners">
         <div class="container">
             <div class="banners_boxs banner_3_img">
                 <a href="#" class="box" ><img src="img/banner_box1.jpg" alt=""></a>
