--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
            </div>
     </div>
 
-    <div id="order" class="banners">
-        <div class="container">
-            <div class="banners_boxs banner_3_img">
+    <div  class="banners">
+        <div  class="container">
+            <div  class="banners_boxs banner_3_img">
                 <a href="#" class="box" ><img src="img/banner_box1.jpg" alt=""></a>
                 <a href="#" class="box" ><img src="img/banner_box2.jpg" alt=""></a>
                 <a href="#" class="box" ><img src="img/banner_box3.jpg" alt=""></a>
