--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <div class="swiper-slide">
                         <a href="#"><img src="img/banner_home2.png" alt=""></a>
                     </div>
+                    <div class="swiper-slide">
+                        <a href="#"><img src="img/banner_home1.png" alt=""></a>
+                    </div>
 
                     
                 </div>
