--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
         </div>
 
         <div class="bottom_header">
-            <div class="container">
+            <div class="container header-flex">
+                <!-- Hamburger menu for mobile nav -->
+                <button class="hamburger" id="hamburgerBtn" aria-label="Open navigation" style="display:none;"><i class="fa fa-bars"></i></button>
                 <nav class="nav">
-                    <ul class="nav_links">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#order">Order</a></li>
-                        <li><a href="#last-banner">Sales</a></li> 
-                        <li><a href="#footer">Contact</a></li>
-                    </ul>
+                  <ul class="nav_links" id="navLinks">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#order">Order</a></li>
+                    <li><a href="#last-banner">Sales</a></li> 
+                    <li><a href="#footer">Contact</a></li>
+                  </ul>
                 </nav>
                 <div class="login_signup btns">
                     <a href="#" class="btn" id="loginBtn">Login &nbsp;  <i class="fa-solid fa-right-to-bracket"></i></a>
