--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
         <div class="container">
           <div class="slider_wrapper">
       
+            <div class="filter-bar" style="margin: 20px auto; display: flex; gap: 20px; align-items: center; justify-content: center; max-width: 500px;">
+              <label for="minPrice">Min Price:</label>
+              <input type="number" id="minPrice" min="0" placeholder="0" style="width: 80px;">
+              <label for="maxPrice">Max Price:</label>
+              <input type="number" id="maxPrice" min="0" placeholder="1000" style="width: 80px;">
+              <button class="btn" id="applyPriceFilter" type="button"><i class="fa fa-filter"></i> Apply</button>
+            </div>
+
             <div class="slider_products">
               <div class="products" id="productContainer">
 
